# imagegen-pptx-pipeline

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/model-technical/: brief.md
examples/product-launch/: brief.md
imagegen-pptx-pipeline/: PITFALLS.md  SKILL.md  iconcut3.py  qa_gate.py  slidelib.py
imagegen-pptx-pipeline/agents/: openai.yaml
imagegen-pptx-pipeline/references/: native-reconstruction-playbook.md  prompt-templates.md  schemas.md  style-library.md  subagent-rubrics.md  taste-integration.md  taste-system.md
imagegen-pptx-pipeline/scripts/: audit_pptx_reconstruction.py  audit_visual_fidelity.py  check_imagegen_comp_asset.py  check_pipeline_gates.py  init_pipeline_workspace.py  normalize_slide_comp.py  prepare_icon_assets.py  realesrgan_upscale.py
tests/: test_pipeline_smoke.py
tools/: sync-to-codex.sh
